movie-asset component added
the main page is divided into three columns assets,descriptions and review

--- a/MovieRush/src/app/app.component.html
+++ b/MovieRush/src/app/app.component.html
@@ -1,1 +1,16 @@
 <header-component></header-component>
+<div class="row">
+    <div class="col-md-3">
+        <app-movie-assets></app-movie-assets>
+    </div>
+    <div class="col-md-4">
+        <app-movie-details></app-movie-details>
+
+    </div>
+
+    <div class="col-md-3">
+        <app-reviews></app-reviews>
+
+    </div>
+
+</div>
