--- a/MovieRush/src/app/header/header.component.html
+++ b/MovieRush/src/app/header/header.component.html
@@ -1,3 +1,29 @@
-<h1>
-    I m in header component
-</h1>
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>MovieRush</title>
+    link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Nunito:wght@600&display=swap"
+      rel="stylesheet"
+    />
+  </head>
+  <body>
+    <nav class="searchbar">
+      <div class="searchmovies">Search movies here</div>
+          <a href="https://www.google.com/">
+            <!-- <img src="" class="bookmark" alt="reel" /> -->
+            <button class="watchlist">Watchlist</button>
+          </a>
+          <a href="https://mail.google.com/mail/u/0/#inbox">
+            <button class="signin">Sign In</button>
+          </a>
+          <button class="language">EN</button>
+          <!-- <img src="MovieRush/src/assets/down-arrow.png" class="drop-down" alt="drop-down" /> -->
+    </nav>
+  </body>
+</html>
