made all properties properly aligned

--- a/MovieRush/src/app/app.component.html
+++ b/MovieRush/src/app/app.component.html
@@ -1,5 +1,7 @@
+<div class="navbar">
 <header-component></header-component>
-<div class="row">
+</div>
+<!-- <div class="row">
     <div class="col-md-3">
         <app-movie-assets></app-movie-assets>
     </div>
@@ -13,4 +15,4 @@
 
     </div>
 
-</div>
+</div> -->
