--- a/MovieRush/src/app/header/header.component.html
+++ b/MovieRush/src/app/header/header.component.html
@@ -13,17 +13,25 @@
     />
   </head>
   <body>
-    <nav class="searchbar">
+    <div class="searchbar">
+      <label for="toggle">&#9776;</label>
+      <input type="checkbox" id="toggle" />
+      <!-- <div class="menu"> -->
       <div class="searchmovies">Search movies here</div>
-          <a href="https://www.google.com/">
-            <!-- <img src="" class="bookmark" alt="reel" /> -->
-            <button class="watchlist">Watchlist</button>
-          </a>
-          <a href="https://mail.google.com/mail/u/0/#inbox">
-            <button class="signin">Sign In</button>
-          </a>
-          <button class="language">EN</button>
-          <!-- <img src="MovieRush/src/assets/down-arrow.png" class="drop-down" alt="drop-down" /> -->
-    </nav>
+      <a href="https://www.google.com/">
+        <img src="../../assets/bookmark.png" class="bookmark" alt="reel" />
+        <button class="watchlist">Watchlist</button>
+      </a>
+      <a href="https://mail.google.com/mail/u/0/#inbox">
+        <button class="signin">Sign In</button>
+      </a>
+      <button class="language">EN</button>
+      <img
+        src="../../assets/down-arrow.png"
+        class="drop-down"
+        alt="drop-down"
+      />
+    </div>
+    <!-- </div> -->
   </body>
 </html>
