--- a/MovieRush/src/app/movies/movie-assets/movie-assets.component.html
+++ b/MovieRush/src/app/movies/movie-assets/movie-assets.component.html
@@ -1,1 +1,10 @@
-<p>movie-assets works!</p>
+<!-- <img src="https://live.staticflickr.com/65535/49329640273_09c9db3695_c.jpg" alt="poster"> -->
+<span class="pull-center">
+    <img 
+    src="https://live.staticflickr.com/65535/49329640273_09c9db3695_c.jpg"
+    alt="notting hill"
+    class="img-responsive poster">
+</span>
+<video>
+
+</video>
