--- a/MovieRush/src/app/app.component.html
+++ b/MovieRush/src/app/app.component.html
@@ -1,18 +1,22 @@
 <div class="navbar">
 <header-component></header-component>
 </div>
-<!-- <div class="row">
-    <div class="col-md-3">
-        <app-movie-assets></app-movie-assets>
+<div class="row">
+    <div class="col-md-4">
+        <br>
+       <app-movie-assets></app-movie-assets>
     </div>
     <div class="col-md-4">
-        <app-movie-details></app-movie-details>
+        <app-movie-list>
+        </app-movie-list>
 
     </div>
 
     <div class="col-md-3">
+        <br>
         <app-reviews></app-reviews>
 
     </div>
 
-</div> -->
+</div>
+<br>
