--- a/MovieRush/src/app/header/header.component.css
+++ b/MovieRush/src/app/header/header.component.css
@@ -1,156 +1,216 @@
-html,body {
-  position: relative;
-  background: #040611;
-  width:100%;
-  height:100%;
+*{
+  color: #fff;
   margin:0;
+  padding:0;
+  box-sizing:border-box;
+  font-family:'Nunito';
 }
-.searchbar {
-  position: absolute;
-  width: 800px;
-  height: 53px;
-  left: 35px;
-  top: 32px;
-  background-color: #808080;
-  border-radius: 13px;
+
+
+
+nav{
+  background-color: #050715;
+  padding:10px 30px 10px 06px;
+  border:1px solid white;
+  border-left:none;
+  border-right:none;
+}
+
+nav::after{
+  content:'';
+  clear:both;
+  display:table;
+}
+
+nav ul{
+  display:table;
+  list-style: none; 
+  float:right;
+  margin-right:40px;
+  position:relative;
 
 }
 
-.searchmovies {
-  position: absolute;
-  width: 800px;
-  height: 52px;
-  left: 300px;
-  font-family: "Nunito";
-  font-style: normal;
-  font-weight: 400;
-  font-size: 24px;
-  line-height: 33px;
-  display: inline-flex;
-  align-items: center;
-  text-align: center;
-  color: #808080;
+nav ul li{
+  display:inline-block;
+  background-color: #050715;
+  margin:0 5px;
+
+
+}
+
+nav ul ul li a:hover{
+  color:cyan;
+  box-shadow: none;
+
+}
+
+nav ul li a{
+  color: #fff;
+  text-decoration: none;
+  line-height:70px;
+  font-size:18px;
+  padding:8px 15px;
   
+
+
+
 }
 
-.bookmark {
-  position: absolute;
-  width: 42px;
-  height: 52px;
-  left: 900px;
-  top: 5px;
-  background: url(../../assets/bookmark.png);
-  transform: matrix(-1, 0, 0, 1, 0, 0);
-  color: #ffffff;
+nav ul ul{
+  position:absolute;
+  top:90px;
+  opacity: 0;
+  visibility: hidden;
+  transition: top .3s;
+
+ 
 }
 
-.watchlist {
-  position: absolute;
-  width: 176px;
-  height: 55px;
-  left: 950px;
-  top: 5px;
-  font-family: "Nunito";
-  font-style: normal;
-  font-weight: 400;
-  font-size: 32px;
-  line-height: 44px;
-  display: inline-block;
-  color: #ffffff;
-  background-color: #040611;
-  border: 0;
-  border-radius: 10px;
+nav ul li:hover > ul{
+  top:70px;
+  opacity: 1;
+  visibility: visible;
+
 }
 
-.signin {
-  position: absolute;
-  width: 154px;
-  height: 55px;
-  left: 1137px;
-  top: 5px;
-  font-family: "Nunito";
-  font-style: normal;
-  font-weight: 400;
-  font-size: 32px;
-  line-height: 44px;
-  display: inline-block;
-  color: #ffffff;
-  background-color: #040611;
-  border: 0;
-  border-radius: 10px;
-}
-
-.language {
-  position: absolute;
+nav ul ul li{
+  position:relative;
+  margin:0px;
   width: 60px;
-  height: 55px;
-  left: 1299px;
-  top: 5px;
-  font-family: "Nunito";
-  font-style: normal;
-  font-weight: 400;
-  font-size: 32px;
-  line-height: 44px;
-  display: inline-block;
-  color: #ffffff;
-  background-color: #040611;
-  border: 0px;
-  border-radius: 10px;
+  float:none;
+  display:list-item;
+  color: #fff;
+  border-bottom: 1px solid rgba(0,0,0,0.3);
 }
 
-.drop-down {
-  position: absolute;
-  width: 19px;
-  height: 19px;
-  left: 1370px;
-  top: 28px;
-  background: url(../../assets/down-arrow.png);
+nav ul ul li a{
+  line-height: 40px;
 }
 
-.watchlist:hover {
-  background-color: #0f163e;
-  transition-duration: 0.4s;
-}
-
-.signin:hover {
-  background-color: #0f163e;
-  transition-duration: 0.4s;
-}
-
-.language:hover {
-  background-color: #0f163e;
-  transition-duration: 0.4s;
-}
-
-label{
-  margin: 0 40px 0 0;
-  font-size: 26px;
+nav .logo{
+  float:left;
+  color:white;
   line-height: 70px;
-  display: none;
+  font-size:30px;
+  font-weight:700px;
+  padding-left:60px ;
 }
 
-#toggle{
-  display: none;
+nav ul li a:hover{
+  color:cyan;
+  border-radius: 5px;
+  box-shadow: 0 0 5px #33ffff,
+              0 0 5px #66ffff;
+}
+
+
+
+nav ul  a:hover{
+  color:cyan;
+}
+
+nav ul.search-icon{
+  height:40px;
+  width:240px;
+  display:flex;
+  background:#f2f2f2;
+  border-radius: 5px;
+}
+
+nav ul .search-icon input{
+  height:100%;
+  width:200px;
+  border:none;
+  outline:none;
+  padding:0 10px;
+  color:#000;
+  font-size: 16px;
+  border-radius: 5px 0  0 5px;
+}
+
+nav ul .search-icon .icon{
+  height:100%;
+  width:40px;
+  line-height: 40px;
+  text-align: center;;
+  border-radius: 0 5px 5px 0;
+  cursor: pointer;
+}
+
+nav ul .search-icon .icon span{
+  color: #fff;
+  font-size: 18px;
+}
+
+.bookmark{
+width:20px;
+height:25px;
+background: url(../../assets/bookmark.png);
+transform: matrix(-1, 0, 0, 1, 0, 0);
+color:#FFFFFF
+}
+
+.drop-down{
+  width: 15px;
+  height: 15px;
+  left: 1670px;
+  top: 135px;
+  background: url(../../assets/down-arrow.png);
+  }
+
+.show,.icon,input{
+
+  display:none;
 
 }
 
-@media only screen and (max-width:500px){
-  label{
-    display: block;
-    cursor:pointer;
+@media all and (max-width:968px){
+  nav ul{
+      margin-right: 0px;
+      float:left;
   }
-  .menu{
+  nav .logo{
+      padding-left:30px;
+      width:100%;
+  }
+  nav ul li,nav ul ul li{
+      display:block;
+      width:100%;
 
-    text-align: center;
-    width:100%;
   }
-  .menu a{
-    display:block;
-    border-bottom: 1px solid black;
-    
+  nav ul ul{
+      top:70px;
+      position:static;
+      border-top:none;
+      float:none;
+      display:none;
+      opacity:1;
+      visibility: visible;
   }
+  nav ul  ul a{
+      padding-left:40px;
+
+  }
+  .icon{
+      display:block;
+      color:white;
+      position:absolute;
+      right:40px;
+      line-height:70px;
+      font-size: 25px;
+      cursor:pointer;
+
+ }
+  nav ul li a:hover{
+      box-shadow:none;
+
+  }
+
+
+
 }
 
-body{
-  background-color: #040611;
+.reveal{
+  display:block;
 }
