--- a/MovieRush/src/app/movies/movie-assets/movie-assets.component.html
+++ b/MovieRush/src/app/movies/movie-assets/movie-assets.component.html
@@ -1,10 +1,21 @@
-<!-- <img src="https://live.staticflickr.com/65535/49329640273_09c9db3695_c.jpg" alt="poster"> -->
-<span class="pull-center">
+
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <title>Document</title>
+</head>
+<body>
+    <div class="container">
     <img 
-    src="https://live.staticflickr.com/65535/49329640273_09c9db3695_c.jpg"
+    src="https://www.hnldesign.nl/wp-content/uploads/2020/08/resized/1920/0/90/0/usm/Dunkirk-Poster-by-hnldesign.jpg"
     alt="notting hill"
     class="img-responsive poster">
-</span>
-<video>
+<i class="fa fa-bookmark" style="color:green;font-size: 30px;"></i>
+</div>
+</body>
+</html>
 
-</video>
