--- a/MovieRush/src/app/reviews/reviews.component.html
+++ b/MovieRush/src/app/reviews/reviews.component.html
@@ -1,1 +1,44 @@
-<p>reviews works!</p>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+</head>
+<body>
+    <div class="cols">
+        <div class="row-md-4">
+            <br>
+            <div class="star">
+                <!-- <ngb-rating [max]="5" [(rate)]="currentRate" [readonly]="false"></ngb-rating> -->
+            </div>
+          <hr>
+        </div>
+        <div class="row-md-4">
+            <button>Add your review</button>
+            <hr>
+            
+    
+        </div>
+    
+        <div class="row-md-3">
+            <br>
+            Starring
+            <ul>
+                <li>Leonardo DiCaprio</li>
+                <li>Robert Downey Jr</li>
+                <li>Tom Hanks</li>
+                <li>Dwayne Johnson</li>
+                <li>Tom Cruise</li>
+                <li>Brad Pitt</li>
+            </ul>
+
+            <hr>
+           
+        </div>
+    
+    </div>
+    
+</body>
+</html>
