--- a/MovieRush/src/app/movies/movie-assets/movie-assets.component.html
+++ b/MovieRush/src/app/movies/movie-assets/movie-assets.component.html
@@ -12,12 +12,13 @@
     <div class="container">
     <img 
     src="https://www.hnldesign.nl/wp-content/uploads/2020/08/resized/1920/0/90/0/usm/Dunkirk-Poster-by-hnldesign.jpg"
-    alt="notting hill"
+    alt="Dunkirk"
     class="img-responsive poster">
     <div (click)="toggleColor()">
 <i class="fa fa-bookmark"  style="font-size: 25px;"[ngClass]="{'active':isActive}"></i>
 </div>
 </div>
+<p>Movie Trailer comes here soon!!</p>
 </body>
 </html>
 
