--- a/MovieRush/src/app/reviews/reviews.component.html
+++ b/MovieRush/src/app/reviews/reviews.component.html
@@ -7,12 +7,10 @@
     <title>Document</title>
 </head>
 <body>
-    <div class="cols">
+    <!-- <div class="cols">
         <div class="row-md-4">
             <br>
-            <div class="star">
-                <!-- <ngb-rating [max]="5" [(rate)]="currentRate" [readonly]="false"></ngb-rating> -->
-            </div>
+           rating comes here
           <hr>
         </div>
         <div class="row-md-4">
@@ -38,7 +36,8 @@
            
         </div>
     
-    </div>
+    </div> -->
+    <app-review-edit></app-review-edit>
     
 </body>
 </html>
