--- a/MovieRush/src/app/app.component.html
+++ b/MovieRush/src/app/app.component.html
@@ -4,11 +4,11 @@
 <div class="row">
     <div class="col-md-4">
         <br>
-       <app-movie-assets></app-movie-assets>
+       <!-- <app-movie-assets></app-movie-assets> -->
     </div>
     <div class="col-md-4">
-        <app-movie-list>
-        </app-movie-list>
+        <!-- <app-movie-list>
+        </app-movie-list> -->
 
     </div>
 
