--- a/MovieRush/src/app/movies/movie-assets/movie-assets.component.html
+++ b/MovieRush/src/app/movies/movie-assets/movie-assets.component.html
@@ -18,7 +18,8 @@
 <i class="fa fa-bookmark"  style="font-size: 25px;"[ngClass]="{'active':isActive}"></i>
 </div>
 </div>
-<p>Movie Trailer comes here soon!!</p>
+<br>
+<p><iframe  src="https://www.youtube.com/embed/F-eMt3SrfFU" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen class="trailer"></iframe></p>
 </body>
 </html>
 
