--- a/MovieRush/src/app/reviews/review-edit/review-edit.component.css
+++ b/MovieRush/src/app/reviews/review-edit/review-edit.component.css
@@ -1,6 +1,17 @@
 .img-responsive{
     float:left;
     padding: 0 0 10px 10px;
-   
-   
 }
+
+.sr-only {
+    position: absolute;
+    width: 1px;
+    height: 1px;
+    padding: 0;
+    margin: -1px;
+    overflow: hidden;
+    clip: rect(0,0,0,0);
+    white-space: nowrap;
+    border: 0;
+  }
+  
