--- a/MovieRush/src/app/movies/movie-details/movie-details.component.html
+++ b/MovieRush/src/app/movies/movie-details/movie-details.component.html
@@ -1,1 +1,18 @@
-<p>movie-details works!</p>
+<div class="row">
+    <div class="col-md-4">
+        <br>
+       <app-movie-assets></app-movie-assets> 
+    </div>
+    <div class="col-md-4">
+       <app-movie-list>
+        </app-movie-list> 
+
+    </div>
+
+    <div class="col-md-3">
+        <br>
+        <app-reviews></app-reviews>
+
+    </div>
+
+</div>
