--- a/MovieRush/src/app/reviews/reviews.component.html
+++ b/MovieRush/src/app/reviews/reviews.component.html
@@ -7,7 +7,7 @@
     <title>Document</title>
 </head>
 <body>
-    <!-- <div class="cols">
+    <div class="cols">
         <div class="row-md-4">
             <br>
            rating comes here
@@ -37,8 +37,8 @@
            
         </div>
     
-    </div> -->
-    <app-review-edit></app-review-edit>
+    </div>
+    <!-- <app-review-edit></app-review-edit> -->
     
 </body>
 </html>
