--- a/MovieRush/src/app/app.component.html
+++ b/MovieRush/src/app/app.component.html
@@ -1,22 +1,6 @@
 <div class="navbar">
-<header-component></header-component>
+<header-component (notify)="changePage($event)"></header-component>
 </div>
-<div class="row">
-    <div class="col-md-4">
-        <br>
-       <app-movie-assets></app-movie-assets> 
-    </div>
-    <div class="col-md-4">
-       <app-movie-list>
-        </app-movie-list> 
-
-    </div>
-
-    <div class="col-md-3">
-        <br>
-        <app-reviews></app-reviews>
-
-    </div>
-
-</div>
+<app-movie-details *ngIf="active==='watchlist'"></app-movie-details>
+<app-home></app-home>
 <br>
