--- a/MovieRush/src/app/movies/movie-list/movie-list.component.html
+++ b/MovieRush/src/app/movies/movie-list/movie-list.component.html
@@ -5,22 +5,7 @@
 <hr>
 <div class="row">
     <div class="col-xs-12">
-        <div
-        class="list-group-item clearfix"
-        *ngFor="let movie of movies">
-        <div class="pull-center">
-            <h4 class="list-group-item-heading">{{movie.name}}</h4>
-        </div>
-        <span class="pull-left">
-            <img 
-            src="{{movie.imgPath}}"
-            alt="{{movie.name}}"
-            class="img-responsive"
-            style="max-height:50px;">
-        </span>
-        <h3>About the film</h3>
-        <p class="list-group-item-text">{{movie.desc}}</p>
-    </div>
-    <app-movie-item></app-movie-item>
+      
+    <!-- <app-movie-item></app-movie-item> -->
     </div>
 </div>
