--- a/MovieRush/src/app/movies/movie-list/movie-list.component.html
+++ b/MovieRush/src/app/movies/movie-list/movie-list.component.html
@@ -6,6 +6,8 @@
 <div class="row">
     <div class="col-xs-12">
       
-    <!-- <app-movie-item></app-movie-item> -->
+    <app-movie-item 
+    *ngFor="let movieEl of movies"
+    [movie]="movieEl"></app-movie-item>
     </div>
 </div>
