--- a/MovieRush/src/app/home/home.component.html
+++ b/MovieRush/src/app/home/home.component.html
@@ -1,1 +1,27 @@
-<p>home works!</p>
+    <div *ngIf="images && images.length>0" class="carousel-container">
+        <img  *ngFor="let image of images;let i=index" 
+        [src]="image.imageSrc" [alt]="image.imageAlt"
+        [ngClass]="{'image-active':selectedIndex===i}"
+        class="fade"
+        >
+    </div>
+    <div *ngIf="indicators" class="carousel-dot-container">
+            <span *ngFor="let dot of images;let i=index" 
+            class="dot"
+            [ngClass]="{'active':selectedIndex===i}"
+            (click)="selectImage(i)"
+            >
+            </span>
+    </div>
+    <button  *ngIf="controls" class="btn-carousel btn-prev">
+        <i class="fa fa-arrow-circle-left icon-carousel icon-prev"
+        (click)="onPrevClick()"></i>
+    </button>
+    <button  *ngIf="controls" class="btn-carousel btn-next">
+        <i class="fa fa-arrow-circle-right icon-carousel icon-next"
+        (click)="onNextClick()"></i>
+    </button>
+    <div class="movielist">
+        Movie list comes here
+
+    </div>
