--- a/MovieRush/src/app/home/home.component.html
+++ b/MovieRush/src/app/home/home.component.html
@@ -21,7 +21,9 @@
         <i class="fa fa-arrow-circle-right icon-carousel icon-next"
         (click)="onNextClick()"></i>
     </button>
+    <br>
     <div class="movielist">
-        Movie list comes here
+        <p class="stream">What is Streaming!! </p>
+       <app-movie-list [posters]="images"></app-movie-list> 
 
     </div>
