--- a/MovieRush/src/app/movies/movie-list/movie-list.component.html
+++ b/MovieRush/src/app/movies/movie-list/movie-list.component.html
@@ -1,13 +1,8 @@
 <div class="row">
-    <div class="col-xs-12">
-    </div>
+<div class="poster-container" *ngFor="let poster of posters">
+    <img 
+    [src]="poster.imageSrc" [alt]="poster.alt">
+    <br>
+    {{poster.imageAlt}}
 </div>
-<hr>
-<div class="row">
-    <div class="col-xs-12">
-      
-    <app-movie-item 
-    *ngFor="let movieEl of movies"
-    [movie]="movieEl"></app-movie-item>
-    </div>
 </div>
