--- a/MovieRush/src/app/movies/movie-list/movie-list.component.css
+++ b/MovieRush/src/app/movies/movie-list/movie-list.component.css
@@ -1,15 +1,146 @@
-.row{
-    display:flex;
-
-}
-.poster-container{
-flex: 33.33%;
-padding: 5px;
-
+@import url('https://fonts.googleapis.com/css2?family=Nunito:wght@600&display=swap');
+body{
+    background-color: antiquewhite;
+    font-family: 'Nunito', sans-serif;
 }
 
-.poster-container img{
-    width: 201.28px;
-    height: 357px;
-    border-radius:11.5px ;
+
+.card{
+    position: absolute;
+    width:300px;
+    height:450px;
+}
+
+
+.card .poster{
+    position:relative;
+    overflow:hidden;
+     background:#000;  
+}
+
+.card .poster:before{
+    content:'';
+    position:relative;
+    bottom:0;
+    left:0;
+    width:100%;
+    height:100%;
+    background: linear-gradient(0deg,#000 50%,transparent);
+    z-index:1;
+
+}
+.card .poster img{
+    width:100%;
+    padding:10px
+
+}
+
+.details{
+    position:relative;
+    padding:20px;
+    width:100%;
+    height:100%;
+    left:0;
+    box-sizing: border-box;
+    transition:0.5s;
+    z-index:2;
+}
+
+.details h2{
+    color: #fff;
+    margin:0;
+    padding:0;
+    font-size:20px;
+}
+
+.details h2 span{
+    font-size:14px;
+    color:#ff9890;
+}
+
+.rating{
+    position:relative;
+    padding:5px 0;
+}
+
+.rating .fa{
+    color:#f7f406;
+    margin-right:2px;
+    font-size:16px;
+
+}
+
+.rating span{
+    color:#fff;
+    padding:0 5px;
+}
+
+.tags{
+    position:relative;
+    margin-top:5px;
+
+}
+
+.tags span{
+    padding:2px 5px;
+    margin-right:2px;
+    color:#fff;
+    display: inline-block;
+    border-radius: 4px;
+
+}
+
+.tags span.genre1{
+    background: #7206f7;
+
+}
+
+.tags span.genre2{
+    background: #f70661;
+
+}
+
+.info{
+    color:#fff;
+
+}
+
+.info p{
+    margin:15px 0 10px;
+    
+}
+
+.star{
+    position:relative;
+}
+
+.star h4{
+    margin:0;
+    padding:0;
+    font-size: 20px;
+    color:#f7f403;
+
+}
+
+.star ul{
+    margin:10px 0 0;
+    padding:0;
+    display: flex;
+}
+
+.star ul li{
+    list-style: none;
+    width:35px;
+    height:35px;
+    background: #fff;
+    /* border-radius: 50%; */
+    overflow: hidden;
+    margin-right: 6px;
+
+}
+
+.star ul li img{
+    width:100%;
+
+
 }
