--- a/MovieRush/src/app/home/home.component.html
+++ b/MovieRush/src/app/home/home.component.html
@@ -21,9 +21,7 @@
         <i class="fa fa-arrow-circle-right icon-carousel icon-next"
         (click)="onNextClick()"></i>
     </button>
-    <br>
     <div class="movielist">
-        <p class="stream">What is Streaming!! </p>
-       <app-movie-list [posters]="images"></app-movie-list> 
+        Movie list comes here
 
     </div>
