--- a/MovieRush/src/app/app.component.html
+++ b/MovieRush/src/app/app.component.html
@@ -3,6 +3,6 @@
 </div>
 <app-movie-details *ngIf="active==='watchlist'"></app-movie-details>
 <app-home  [images]="images" 
-[autoSlide]="true"
+[autoSlide]="false"
 *ngIf="active!=='watchlist'"></app-home>
 <br>
