--- a/MovieRush/src/app/home/home.component.css
+++ b/MovieRush/src/app/home/home.component.css
@@ -3,6 +3,7 @@
     margin:auto;
     text-align: center;
     width:700px;
+    height: 300px;
     border-radius: 15px;
     box-shadow:0 8px 16px #dce1e1;
 
@@ -11,6 +12,8 @@
 .carousel-container img{
     display: none;
     border-radius: 15px;
+    width:100%;
+    height:300px;
 
 
 }
@@ -18,7 +21,7 @@
 .carousel-container img.image-active{
     display: block;
     width:100%;
-    height:400px;
+    height:300px;
     opacity: 1;
 }
 
@@ -87,13 +90,13 @@
 }
 
 .btn-prev{
-    right:978px;
+    right:678px;
     top:280px;
 }
 .btn-next{
     position:absolute;
     top:280px;
-    left:978px;
+    left:778px;
     
 
 }
