--- a/MovieRush/src/app/home/home.component.html
+++ b/MovieRush/src/app/home/home.component.html
@@ -22,6 +22,6 @@
         (click)="onNextClick()"></i>
     </button>
     <div class="movielist">
-        Movie list comes here
+        <app-movie-list [posters]="images"></app-movie-list>
 
     </div>
