--- a/MovieRush/src/app/home/home.component.css
+++ b/MovieRush/src/app/home/home.component.css
@@ -29,8 +29,8 @@
 
 .carousel-dot-container{
     position:absolute;
-    top:500px;
-    left:678px;
+    top:390px;
+    left:425px;
     display:flex;
     justify-content: center;
     padding:0;
@@ -90,13 +90,13 @@
 }
 
 .btn-prev{
-    right:678px;
+    right:750px;
     top:280px;
 }
 .btn-next{
     position:absolute;
     top:280px;
-    left:778px;
+    left:750px;
     
 
 }
@@ -116,4 +116,15 @@
 }
 
 
+@media (max-width:840px){
+    .btn-next{
+        display: none;
+    }
+    .btn-prev{
+        display: none;
+    }
 
+    .carousel-dot-container{
+        display: none;
+    }
+}
