added sign in and movie card kind

--- a/MovieRush/src/app/app.component.html
+++ b/MovieRush/src/app/app.component.html
@@ -7,14 +7,14 @@
     </div>
     <div class="row">
         <app-home  [images]="images" [autoSlide]="false"
-*ngIf="active!=='watchlist'"></app-home>
+*ngIf="active!=='watchlist'"></app-home> 
 <!-- <app-movie-details></app-movie-details> -->
 
-<br>
+<!-- <br>
 
 
-    </div>
+    <!-- </div> -->
 </div>
 
 
-
+<!-- <app-register></app-register> -->
