--- a/MovieRush/src/app/home/home.component.html
+++ b/MovieRush/src/app/home/home.component.html
@@ -21,7 +21,9 @@
         <i class="fa fa-arrow-circle-right icon-carousel icon-next"
         (click)="onNextClick()"></i>
     </button>
-    <div class="movielist">
+    <div class="movielist"> 
+        <!-- list of movies -->
         <app-movie-list [posters]="images"></app-movie-list>
+        <!-- <app-movie-list></app-movie-list> -->
 
     </div>
