--- a/MovieRush/src/app/home/home.component.css
+++ b/MovieRush/src/app/home/home.component.css
@@ -30,7 +30,7 @@
 .carousel-dot-container{
     position:absolute;
     top:390px;
-    left:425px;
+    left:925px;
     display:flex;
     justify-content: center;
     padding:0;
@@ -90,13 +90,13 @@
 }
 
 .btn-prev{
-    right:750px;
+    right:1050px;
     top:280px;
 }
 .btn-next{
-    position:absolute;
-    top:280px;
-    left:750px;
+    /* position:absolute;*/
+     top:280px;
+    left:1050px; 
     
 
 }
