--- a/MovieRush/src/app/movies/movie-list/movie-list.component.html
+++ b/MovieRush/src/app/movies/movie-list/movie-list.component.html
@@ -1,5 +1,7 @@
-
+<div class="posterTable">
+    <br>
      <table class="fundClassesTable" [class.transpose]="transpose" id="toggled-element">
+         <th class="tagline">What to watch?</th>
 		<tr *ngFor="let f of posters">
                 <td>
                 <div class="poster col-sm-12 links" >
@@ -34,5 +36,6 @@
         </td>           
     </tr>
 	</table>
+</div>
 
    
