--- a/MovieRush/src/app/home/home.component.html
+++ b/MovieRush/src/app/home/home.component.html
@@ -22,7 +22,7 @@
         (click)="onNextClick()"></i>
     </button>
     <br>
-    <div class="movielist"> 
+    <div class="movielist" style="background-color: #E7E7E7"> 
         <!-- list of movies -->
         <app-movie-list [posters]="images"></app-movie-list>
         <!-- <app-movie-list></app-movie-list> -->
