--- a/MovieRush/src/app/app.component.html
+++ b/MovieRush/src/app/app.component.html
@@ -6,9 +6,9 @@
 
     </div>
     <div class="row">
-        <app-home  [images]="images" [autoSlide]="false"
-*ngIf="active!=='watchlist'"></app-home> 
-<!-- <app-movie-details></app-movie-details> -->
+        <app-home  [images]="images" [autoSlide]="true"
+*ngIf="active!=='watchlist'"></app-home>  -->
+<!-- <app-movie-details></app-movie-details>
 
 <!-- <br>
 
