added movie component

--- a/MovieRush/src/app/movies/movie-details/movie-details.component.html
+++ b/MovieRush/src/app/movies/movie-details/movie-details.component.html
@@ -1,11 +1,10 @@
-<!-- <div class="row">
+<div class="row">
     <div class="col-md-4">
         <br>
        <app-movie-assets></app-movie-assets> 
     </div>
     <div class="col-md-4">
-       <app-movie-list>
-        </app-movie-list> 
+     <app-movies></app-movies>
 
     </div>
 
@@ -15,10 +14,10 @@
 
     </div>
 
-</div> -->
+</div>
 
 
-<div class="container">
+<!-- <div class="container">
     <div class="row">
         <div class="col-md-3">
             <h3>hey hey i span 3 coloumbs and bootstrap allows a maximum of 12 
@@ -48,13 +47,13 @@
             </h3>
         </div>  
     
-        <!-- now that we have used up all the 12 coloumbs in this row , lets go create a new "row class" , Alas in the same container -->
-    </div>  <!-- end of row -->
+       
+    </div>  
     
     <div class="row">
         <div class="col-md-12">
             <h3>I am a col , that spans the entire 12 coloumbs that this row had to offer , by now you should know that if you want to create another coloumb , you have to go create another "row" class</h3>
         </div>
     </div>
-    </div>  <!-- end of container -->
-    
+    </div>
+     -->
