--- a/MovieRush/src/app/app.component.html
+++ b/MovieRush/src/app/app.component.html
@@ -8,7 +8,7 @@
     <div class="row">
         <!-- <app-home  [images]="images" [autoSlide]="true"
 *ngIf="active!=='watchlist'"></app-home>   -->
-<!-- <app-movie-details></app-movie-details>
+ <app-movie-details></app-movie-details>
 
 <!-- <br>
 
@@ -17,4 +17,4 @@
 </div>
 
 
-<app-register></app-register>
+<!-- <app-register></app-register> -->
